--- a/css/main.css
+++ b/css/main.css
@@ -381,3 +381,69 @@ section.service .text {
     width:45% ;
     float: right;
 }
+
+/*section.journal*/
+section.journal {
+    background: #f2f0eb;
+    padding: 350px 0 200px;
+    margin-top: -250px;
+    font-family: 'GowunBatang-Regular';
+}
+
+section.journal h2 {
+    font-size: 30px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+section.journal .list {
+    display: flex;
+    justify-content: space-between;
+}
+
+section.journal .list li {
+    width: 330px;
+}
+
+section.journal .list li a {
+
+    display: block;
+}
+section.journal .list li a .img {
+    border-radius: 10px; 
+    overflow: hidden;
+    height: 330px;
+    position: relative;
+
+}
+
+section.journal .list li a .img img {
+    
+    height: 100%;
+    width: auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+
+}
+
+section.journal .list li a h3 {
+    font-size: 15px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin: 30px 0;
+}
+
+section.journal .list li a p {
+    font-size: 16px;
+    line-height: 1.4;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-align: justify;
+}
