--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,9 @@ header .inner .contact {
 .contents { 
 
     background: #fff;
+    position: relative;
+    z-index: 1;
+    margin-bottom: 200px;
 }
 
 .contents .visual {
@@ -447,3 +450,48 @@ section.journal .list li a p {
     -webkit-box-orient: vertical;
     text-align: justify;
 }
+
+
+/*footer*/
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    background: #213135;
+    color: #fff;
+    padding: 75px 0;
+    box-sizing: border-box;
+    z-index: -1;
+}
+
+footer .inner {
+    display: flex;
+    justify-content: space-between;
+    font-family: 'GowunBatang-Regular';
+}
+
+footer .inner .footerLogo {
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+footer .inner .contact {
+    width: 30%;
+    line-height: 1.4;
+    margin-top: 10px;
+}
+
+footer .inner .sns {
+    display: flex;
+    margin-top: 20px;
+}
+
+footer .inner .sns li {
+    margin: 0 40px;
+    font-weight: bold;
+    font-size: 17px;
+}
+
