--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ header {
     font-family: 'GowunBatang-Regular';
     font-weight: bold;
     text-align: center;
+    transition: all 0.4s;
 }
 
 header .inner {
@@ -100,6 +101,7 @@ header .inner .logo {
     display: inline-block;
     font-size: 25px;
     letter-spacing: 1px;
+    transition: all 0.4s;
 }
 
 header .inner .gnbBtn {
@@ -109,6 +111,7 @@ header .inner .gnbBtn {
     height: 12px;
     position: relative;
     margin-top: 15px;
+    transition: all 0.4s;
 
 }
 
@@ -137,6 +140,22 @@ header .inner .contact {
     float: right;
     margin-top: 10px;
 
+}
+
+/*header 모션*/
+header .on { 
+    padding: 20px 0 18px;
+    transition: all 0.4s;
+}
+
+header .on .logo {
+    font-size: 22px;
+    transition: all 0.4s;
+}
+
+header .on .gnbBtn, header.on .contact{
+    margin-top: 4px;
+    transition: all 0.4s;
 }
 
 /*contents*/
@@ -247,7 +266,7 @@ section.about .inner .text p {
 
 /*section.approach*/
 section.approach {
-    padding: 100;
+    padding: 100px 0;
 }
 
 section.approach .inner {
@@ -274,6 +293,11 @@ section.approach .inner .list li a {
     height: 100%;
     border-radius: 10px;
     overflow: hidden;
+    position: relative;
+}
+
+section.approach .inner .list li a span {
+    display: none;
 }
 
 section.approach .inner .list li a img {
@@ -289,6 +313,8 @@ section.approach .inner .fix {
     top: 0;
 }
 
+/*section.approach -모션*/
+
 section.approach .inner .fix .text {
     position: absolute;
     bottom: 10%;
@@ -300,6 +326,43 @@ section.approach .inner .fix .text.on {
     transform: translateY(50%);
 
 }
+
+
+section.approach .inner .list li a.on:after,  section.approach .inner .list li a:hover::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(41,41,41,0.3);;
+}
+
+
+section.approach .inner .list li a.on span, section.approach .inner .list li a:hover span {
+  
+    position: absolute;
+    display: block;
+    z-index: 1;
+    width: 100%;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+    font-size: 35px;
+    font-style: italic;
+}
+
+
+section.approach .inner .list li a.on span b, section.approach .inner .list li a:hover span b {
+    font-family: 'GowunBatang-Regular';
+    font-style: normal;
+
+}
+
+
+
 
 /*section.sectors*/
 section.sectors {
@@ -347,6 +410,8 @@ section.sectors .list li a h3 {
     transition: all 0.4s;
 }
 
+/*section.sectors - 모션*/
+
 section.sectors .list li a:hover img ,
 section.sectors .list li a:focus img{
     transform: scale(1.2);
@@ -357,6 +422,33 @@ section.sectors .list li a:hover h3,
 section.sectors .list li a:focus h3 {
     letter-spacing: 4px;
     transition: all 0.5s;
+}
+
+section.sectors .list.motion li {
+    animation-name: sectors;
+    animation-duration: 1s;
+}
+
+section.sectors .list.motion li:nth-child(2) {
+    animation-duration: 1.15s;
+
+}
+
+section.sectors .list.motion li:nth-child(3) {
+    animation-duration: 1.3s;
+
+}
+
+@keyframes sectors {
+    0% {
+        opacity: 0;
+        transform: translateX(1000px);
+    }
+
+   30% {
+        opacity: 0;
+        transform: translateX(1000px);
+    }
 }
 
 /*section.service*/
@@ -383,6 +475,22 @@ section.service .img img {
 section.service .text {
     width:45% ;
     float: right;
+}
+
+/*section.service -motion*/
+section.service .img.motion {
+    animation-name: service;
+    animation-duration: 1s;
+}
+@keyframes service {
+    0%{
+        opacity: 0;
+        transform: translateX(-1000px);
+    }
+    30%{
+        opacity: 0;
+        transform: translateX(-1000px);
+    }
 }
 
 /*section.journal*/
@@ -449,6 +557,28 @@ section.journal .list li a p {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     text-align: justify;
+}
+
+/*section.journal -motion*/
+section.journal .list.motion li {
+    animation-name: journal;
+    animation-duration: 0.5s;
+}
+
+section.journal .list.motion li:nth-child(2) {
+    animation-duration: 0.6s;
+}
+
+section.journal .list.motion li:nth-child(3) {
+    animation-duration: 0.7s;
+}
+
+section.journal .list.motion li:nth-child(4) {
+    animation-duration: 0.8s;
+}
+@keyframes journal {
+    0%{opacity: 0; transform: translateY(200px);}
+    30%{opacity: 0; transform: translateY(200px);}
 }
 
 
