--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,16 @@ body {
 }
 
 a {
-  color: #777;
+  color: white;
   text-decoration: none;
 }
 
 a:hover {
-  color: #000;
+  color: gray;
+  text-decoration: none;
 }
+
+
 
 h1, h2, h3, h4, h5, h6, .font-heading {
   font-family: "Raleway", sans-serif;
